Fixes Tooltip text-align style

--- a/src/Components/Input/Input.module.css
+++ b/src/Components/Input/Input.module.css
@@ -54,6 +54,7 @@
   left: 50%;
   min-width: 275px;
   transform: translate(-35%, 17%);
+  text-align: left;
 }
 
 @keyframes inputError {
